# CrossSwap

foundry/: .gitmodules  foundry.toml  remappings.txt
foundry/circuit/: Cargo.toml
foundry/circuit/src/: circuit.rs  lib.rs  liquidity_backend.rs  liquidity_proof.rs  main.rs  proof.rs  shared_liquidity.rs
foundry/circuit/src/tests/: liquidity_tests.rs
foundry/src/: CrossSwap.sol
foundry/src/bridge/: ZkLightClient.sol
foundry/src/libraries/: Constants.sol  PoseidonHasher.sol  PoseidonHasherLib.sol
foundry/src/zk/: GKRVerifier.sol  MerkleTree.sol  SharedLiquidityLedger.sol  ZKVerifier.sol
foundry/test/: CrossChainFunctionality.ref  CrossChainFunctionality.t.sol  CrossSwap.Complex.t.sol  CrossSwap.Simple.t.ref  CrossSwap.Simple.t.sol  CrossSwapTest.t.sol  CrossSwapTest.t.sol.temp  CrosswapVerifier.t.sol
foundry/test/libraries/: PoseidonHasherTest.t.sol
foundry/test/mocks/: MockZkLightClient.sol
foundry/test/utils/: EasyPosm.sol  Fixtures.sol
