[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[lib]
name = "circuit"
path = "src/lib.rs"

[[bin]]
name = "circuit"
path = "src/main.rs"

[[bin]]
name = "liquidity_proof"
path = "src/liquidity_proof.rs"

[dependencies]
ark-std = "0.3"
ark-crypto-primitives = "0.3"
ark-bn254 = "0.3"
ark-relations = "0.3"
ark-snark = "0.3"
ark-groth16 = "0.3"
ark-ff = "0.3"
ark-r1cs-std = "0.3"
ark-ec = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "2.0.2"
bincode = "1.3.3"
hex = "0.4.3"
num-bigint = "0.4"
num-traits = { version = "0.2", features = ["std"] }
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection", branch = "dev" }
arith = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
mpi_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
gkr_field_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
expander_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev", package = "config" }
expander_circuit = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev", package = "circuit" }
gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
gf2 = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
mersenne31 = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
expander_transcript = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev", package = "transcript" }
crosslayer_prototype = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev"}
circuit-std-rs = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection", branch = "dev"}
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }